fix tab spacing

--- a/web/app/themes/juniper-theme/src/css/_tailwindStyles.css
+++ b/web/app/themes/juniper-theme/src/css/_tailwindStyles.css
@@ -1051,16 +1051,8 @@ input[type="range"]::-ms-fill-lower {
   grid-column: span 2 / span 2;
 }
 
-.col-span-5 {
-  grid-column: span 5 / span 5;
-}
-
 .col-span-6 {
   grid-column: span 6 / span 6;
-}
-
-.col-span-7 {
-  grid-column: span 7 / span 7;
 }
 
 .m-auto {
@@ -1075,6 +1067,11 @@ input[type="range"]::-ms-fill-lower {
 .mx-0 {
   margin-left: 0px;
   margin-right: 0px;
+}
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .mx-\[1\.25rem\] {
@@ -1784,6 +1781,11 @@ input[type="range"]::-ms-fill-lower {
 
 .p-\[0\.375rem\] {
   padding: 0.375rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
 .px-3 {
